# bouf

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: build.yaml  clippy.yml  delta_test.yaml  full_test.yaml
docs/: README.md  cli.md  config.md
extra/: config.example.toml  config.minimal_example.toml
extra/ci/: config.toml  config_ci.toml  notes_placeholder.rst
extra/nsis/: mp-installer.nsi
extra/test_files/: out.txt  privatekey.pem  pubkey.pem
src/: bench.rs  cli_delta.rs  cli_package.rs  cli_prepare.rs  cli_sign.rs  config.rs  deltas.rs  main.rs  sign.rs
src/models/: args.rs  config.rs  manifest.rs  mod.rs
src/steps/: generate.rs  mod.rs  package.rs  post.rs  prepare.rs
src/utils/: args.rs  bidiff.rs  bsdiff.rs  codesign.rs  config.rs  errors.rs  hash.rs  logging.rs  lzma.rs  misc.rs  mod.rs  sign.rs  zstd.rs
