[package]
name = "bouf"
version = "0.4.1"
authors = ["Dennis <dennis@obsproject.com>"]
edition = "2021"
autobins = false

# Main tool
[[bin]]
name = "bouf"
path = "src/main.rs"

# Standalone utility just for the signing
[[bin]]
name = "bouf-sign"
path = "src/sign.rs"

# Standalone utility just for creating delta patches
[[bin]]
name = "bouf-deltas"
path = "src/deltas.rs"

[dependencies]
# general
anyhow = "1.0.62"
walkdir = "2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
# cli/config
clap = { version = "4.1.4", features = ["derive"] }
toml = "0.5.9"
# delta patching
bsdiff = { git = "https://github.com/jp9000/bsdiff-rs", branch = "tail-end-optimization" }
xz2 = "0.1.7"
zstd = "0.12.2"
# singing
base64 = "0.13.0"
rsa = { version = "0.6.1", features = ["pem"] }
sha2 = "0.10.2"
# hashing
blake2 = "0.10.4"
# parallel processing
rayon = "1.5.3"
indicatif = { version = "0.17.0", features = ["rayon"] }
hashbrown = { version = "0.12", features = ["rayon", "serde"] }

# Used to find signtool for codesigning
[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
