[package]
name = "bouf"
version = "0.6.0"
authors = ["Dennis Sädtler <dennis@obsproject.com>"]
edition = "2021"
autobins = false

# Main tool
[[bin]]
name = "bouf"
path = "src/main.rs"

# Standalone utility just for the signing
[[bin]]
name = "bouf-sign"
path = "src/sign.rs"

# Standalone utility just for creating delta patches
[[bin]]
name = "bouf-deltas"
path = "src/deltas.rs"

[dependencies]
# general
anyhow = "1.0.62"
walkdir = "2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
# logging
log = "0.4.0"
env_logger = "0.10.0"
# cli/config
clap = { version = "4.1", features = ["derive", "wrap_help"] }
toml = "0.7.0"
# delta patching
bsdiff = { git = "https://github.com/space-wizards/bsdiff-rs", rev = "a77199a6dd31d90555b4efd2c57d91d3aa3b69e5" }
xz2 = "0.1.7"
zstd = "0.13.0"
object = { version = "0.31.0", features = ["read"] }
# singing
base64 = "0.13.0"
rsa = { version = "0.8", features = ["sha2"] }
# hashing
blake2 = "0.10.4"
# parallel processing
rayon = "1.5.3"
indicatif = { version = "0.17.0", features = ["rayon"] }
hashbrown = { version = "0.13", features = ["rayon", "serde"] }

# Used to find signtool for codesigning
[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
