[package]
name = "bouf"
version = "0.6.5"
authors = ["Dennis Sädtler <rodney@rodney.io>"]
edition = "2021"
autobins = false

# Main tool
[[bin]]
name = "bouf"
path = "src/main.rs"

# Standalone utility just for the signing
[[bin]]
name = "bouf-sign"
path = "src/sign.rs"

# Standalone utility just for creating delta patches
[[bin]]
name = "bouf-deltas"
path = "src/deltas.rs"

[dependencies]
# general
anyhow = "1.0.92"
walkdir = "2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
# logging
log = "0.4.22"
env_logger = "0.11.7"
# cli/config
clap = { version = "4.5", features = ["derive", "wrap_help"] }
toml = "0.8.19"
# delta patching
bsdiff = { git = "https://github.com/space-wizards/bsdiff-rs", rev = "a77199a6dd31d90555b4efd2c57d91d3aa3b69e5" }
xz2 = "0.1.7"
zstd = "0.13.2"
object = { version = "0.36.5", features = ["read"] }
# singing
base64 = "0.22.1"
rsa = { version = "0.9", features = ["sha2"] }
# hashing
blake2 = "0.10.6"
# parallel processing
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
hashbrown = { version = "0.15", features = ["rayon", "serde"] }

# Used to find signtool for codesigning
[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
